--- a/reminder-app/package.json
+++ b/reminder-app/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase-admin": "^11.10.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
   }
 }
