--- a/reminder-app/package.json
+++ b/reminder-app/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.10.0",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "node-fetch": "^2.6.7"
   }
 }
