--- a/reminder-app/package.json
+++ b/reminder-app/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "firebase-admin": "^11.10.0",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "node-fetch": "^2.6.7"
+    "body-parser": "^1.20.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
