--- a/reminder-app/public/manifest.json
+++ b/reminder-app/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Appointment Reminder",
   "short_name": "Reminders",
   "icons": [{
-    "src": "/icons/icon-192x192.png",
+    "src": "/icons/appt.png",
     "sizes": "192x192",
     "type": "image/png"
   }],
