--- a/reminder-app/public/manifest.json
+++ b/reminder-app/public/manifest.json
@@ -1,13 +1,21 @@
 {
   "name": "Appointment Reminder",
   "short_name": "Reminders",
-  "icons": [{
-    "src": "/icons/appt.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }],
+  "icons": [
+    {
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ],
   "theme_color": "#3498db",
   "background_color": "#ffffff",
   "display": "standalone",
-  "start_url": "/"
+  "start_url": "/",
+  "gcm_sender_id": "1098270976013"
 }
