--- a/reminder-app/public/manifest.json
+++ b/reminder-app/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/iconsicon.png.png",
       "sizes": "192x192",
       "type": "image/png"
     }
